[package]
name = "blog"
version = "0.1.0"
authors = ["zxk7516 <zxk7516@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"


bytes = "0.4"
env_logger = "0.6"
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

diesel = { version = "^1.4", features = ["postgres", "r2d2"] }
r2d2 = "0.8.5"
r2d2-diesel = "1.0"
dotenv = "0.14"
validator = "0.9.0"
validator_derive = "0.9.0"
frank_jwt = "3.1.1"
bcrypt = "0.5.0"
failure = "0.1.5"
actix-http = "0.2.9"
futures = "0.1.28"
